Correct height error on tablet sign-up form

--- a/css/main.css
+++ b/css/main.css
@@ -998,7 +998,6 @@ footer {
   #signup-form {
     padding: 42px;
     width: 360px;
-    height: 198px;
   }
   #signup-form input {
     width: 327px;
