--- a/scss/components/_signup-form.scss
+++ b/scss/components/_signup-form.scss
@@ -151,7 +151,6 @@
     #signup-form {
         padding: 42px;
         width: 360px;
-        height: 198px;
         input {
             width: 327px;
             height: 45px;
